--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,6 +1,6 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
-<!-- Setup Google Analytics -->
+<!-- Setup Google Analytics & Microsoft Clarity -->
 {% include head-custom-microsoft-clarity.html %}
 {% include head-custom-google-analysis.html %}
 
