--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         </ul>
 
         {% if site.github.is_project_page %}
-          <p class="header">This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        <!-- use to add something in section -->
         {% endif %}
 
         {% if site.github.is_user_page %}
@@ -43,7 +43,7 @@
       </section>
 
       <footer>
-        
+
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
